<resources>
    <string name="app_name">Open_SNS</string>
    <string name="txt_logo_top">OS</string>
    <string name="txt_logo_bottom">Open_Sns</string>
    <string name="txt_timeline">TimeLine</string>
    <string name="txt_add_post">Create Post</string>
    <string name="txt_view_post">View Post</string>
    <string name="txt_friends">Friends</string>
    <string name="txt_search_friend">Find Friend</string>
    <string name="txt_my_profile">Profile</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_login">Login</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_join">Sing in</string>
    <string name="txt_name">Id</string>
    <string name="txt_password">Password</string>
    <string name="txt_repassword">Re-enter password</string>
    <string name="txt_push_alarm">Push</string>
    <string name="txt_searchable">Searchable</string>
    <string name="txt_content_hint">Please, input content.</string>
    <string name="txt_done">done</string>
    <string name="txt_delete">delete</string>
    <string name="txt_share">share</string>
    <string name="txt_do_share">Do share</string>
    <string name="txt_pic_change">change picture</string>
    <string name="txt_cancel">cancel</string>
    <string name="msg_insert_image_or_content">Please input image or content.</string>
    <string name="msg_need_app_version_update">Updated to the latest version, please.</string>
    <string name="txt_update">Update</string>

    <string name="txt_following">Following</string>
    <string name="txt_follower">Follower</string>

    <string name="txt_add_follow">Follow+</string>
    <string name="txt_del_follow">Following</string>

    <string name="txt_device_version">Device Version : </string>
    <string name="txt_current_version">Current Version : </string>

    <string name="search_hint">Please input a nickname.</string>


    <string name="date_minutes_ago">minutes ago</string>
    <string name="date_hours_ago">hours ago</string>
    <string name="txt_comment">comment</string>
    <string name="msg_comment_hint">Please input the comments…</string>
    <string name="txt_comment_dialog_title">Delete Comment</string>
    <string name="msg_comment_dialog">Would you delete comments?</string>
    <string name="txt_noti_comment">"Comment : "</string>

    <string name="msg_no_search">Search there are no results.</string>
    <string name="msg_no_post">don\'t have any post \nFollow the members!</string>
    <string name="msg_no_comment">don\'t have any comment</string>
    <string name="msg_no_follower">don\'t have any following member</string>
    <string name="msg_no_following">don\'t have any follow member</string>
    <string name="text_deny_permission">permission deny</string>

</resources>
