<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_join_background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/area_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_logo_top"
            android:textColor="#ffffff"
            android:textSize="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/area_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_logo"
        android:alpha="0"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <EditText
            android:id="@+id/et_nick_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:hint="@string/txt_name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="#60DBDBDB"
            android:textSize="14dp" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="#60DBDBDB"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_login"
            android:text="@string/txt_login"
            android:textColor="@color/colorPrimaryText" />

        <Button
            android:id="@+id/btn_join"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_join"
            android:text="@string/txt_join" />


    </LinearLayout>


</RelativeLayout>
