<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="30dp"
    tools:context="xyz.sangcomz.sangcomz_n_study.ui.main.fragments.SettingFragment">

    <LinearLayout
        android:id="@+id/area_push_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_notifications_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_push_alarm"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20dp" />

        <Switch
            android:id="@+id/sw_push_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:switchMinWidth="50dp"
            android:textOff=" "
            android:textOn=" "
            android:thumb="@drawable/switch_selector"
            android:thumbTextPadding="10dp"
            android:track="@drawable/switch_background" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/area_push_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_notifications_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_searchable"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20dp" />

        <Switch
            android:id="@+id/sw_searchable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:switchMinWidth="50dp"
            android:textOff=" "
            android:textOn=" "
            android:thumb="@drawable/switch_selector"
            android:thumbTextPadding="10dp"
            android:track="@drawable/switch_background" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_device_version"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_current_version"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:text="@string/txt_logout" />

</RelativeLayout>
